# livraria_base_bsi4

./: README.md  pyproject.toml
app/: settings.py  urls.py
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_livro.py  0003_livro_categoria.py
